2019-06-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha07: Kahakai';git push
	git tag -a 4.8.1-alpha07 -m 'ncremap/ncclimo vrt_xtr;ntp_vrt mss_val min max';git push --tags

	* ncclimo print correct regridded filename at end when no_ntv_tms requested

	* ncclimo incorporate vertical extrapolation type vrt_xtr option

	* nco_ntp_vrt() set flag to add _FillValue based on both maximum and minimum midpoint pressure

	* nco_ntp_vrt() set flag to add _FillValue based on maximum midpoint pressure not surface pressure

	* ncremap incorporate vertical extrapolation type vrt_xtr option

2019-06-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha06: School of Rock';git push
	git tag -a 4.8.1-alpha06 -m 'ncremap --msh_fl, rename ESMF xtr_* to esmf_*, IFS vrt_fl w/lev, n2s CCW;Cori GCC not Intel;ncks xtr_mth mss_val;update Makefile/libnco.h; add copyright/license to msh code';git push --tags

	* Add copyright/license to new regridding files nco_ply.c/h, nco_crt.c/h, nco_sph.c/h, nco_ply_lst.c/h, nco_kd.c/h

	* Always use n2s algorithm during Newton-Raphson construction of s2n latitudes (later flipped to n2s)

2019-06-13  Charlie Zender  <zender@uci.edu>

	* Add CW->CCW filter to nco_grd_mk() and nco_grd_nfr() so n2s grids work with TR

2019-06-12  Charlie Zender  <zender@uci.edu>

	* Rename ESMF extrapolation options from "xtr_xyz" to "esmf_xyz"

	* Correctly read lev dimension name from vrt_fl during ECMWF IFS processing

2019-06-08  Charlie Zender  <zender@uci.edu>

	* Move nco_nmn_get() and nco_lbr_vrs_prn/() from nco_ctl.c to nco_scm.c, re-jigger version banner

	* nco_ntp_vrt() handle xtr_mth option with rgr parameter database

	* nco_ntp_vrt() add _FillValue attributes if necessary when missing value extrapolation requested

	* nco_ntp_vrt() pre-screen to determine whether extrapolation necessary
